# sputchedtools

./: .gitignore  MANIFEST.in  README.md  b.bat  build.sh  git_init.bat  pyproject.toml  reqs  setup.py  sputchedtools.py  test.py  test_sputchedtools.py  up.bat  up.sh  update_link.py  web3_test.py
.github/workflows/: build_wheels.yml  make_release.yml  merge_to_releases.yml
.githubold/workflows/: build_wheels.yml  make_release.yml
sptz/: README.md  pyproject.toml  up.bat
sputchedtools_original/: pyproject.toml  setup.py
sputchedtools_original/src/: sputchedtools.py
sputchedtools_original/tests/: test_sputchedtools.py
sputchedtools_original/upload/: up.bat
sputchedtools_packagified/: pyproject.toml  setup.py
sputchedtools_packagified/sputchedtools/: __init__.py  core.py
sputchedtools_packagified/sputchedtools/modules/: aio.py  autils.py  compress.py  mc.py  num.py  utils.py  web3.py
src/: sputchedtools.py
tests/: test_sputchedtools.py
