[build-system]
requires = ["setuptools>=42"]

[project]
name = "sptz"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Sputchik", email = "sputchik@gmail.com"}]
dependencies = ["sputchedtools>=0.37.6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Sputchik/sputchedtools"
Issues = "https://github.com/Sputchik/sputchedtools/issues"

[tool.setuptools.dynamic]
version = {attr = "sputchedtools.__version__"}