[build-system]
requires = ["setuptools>=42"]

[project]
name = "sptz"
readme = "README.md"
version = "0.38.4"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Sputchik", email = "sputchik@gmail.com"}]
dependencies = ["sputchedtools>=0.38.4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Sputchik/sputchedtools"
Issues = "https://github.com/Sputchik/sputchedtools/issues"